pkg/main/default/objects/GenMigrationSettings__c/GenMigrationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store settings related to Gen Package</description>
    <label>Gen Migration Settings</label>
</CustomObject>