pkg/main/default/objects/GenMigrationSettings__c/fields/GenTemplatesMigrated__c.field-meta.xml
<CustomField>
    <fullName>GenTemplatesMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting this value to TRUE after migrating Gen Templates</description>
    <label>AreGenTemplatesMigrated</label>
    <type>Checkbox</type>
</CustomField>