pkg/main/default/objects/GenMigrationSettings__c/fields/GenUsersMigrated__c.field-meta.xml
<CustomField>
    <fullName>GenUsersMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting this value to TRUE after migrating Gen Users</description>
    <label>AreGenUsersMigrated</label>
    <type>Checkbox</type>
</CustomField>