pkg/main/default/objects/GenMigrationSettings__c/fields/TemplateMigrationBatchId__c.field-meta.xml
<CustomField>
    <fullName>TemplateMigrationBatchId__c</fullName>
    <description>To Store Batch Id after Template Migration</description>
    <label>TemplateMigrationBatchId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>