pkg/main/default/objects/GenMigrationSettings__c/fields/TemplateMigrationBatchStatus__c.field-meta.xml
<CustomField>
    <fullName>TemplateMigrationBatchStatus__c</fullName>
    <description>To Store Template Migration Batch Status</description>
    <label>TemplateMigrationBatchStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>