pkg/main/default/objects/GenMigrationSettings__c/fields/UserMigrationBatchId__c.field-meta.xml
<CustomField>
    <fullName>UserMigrationBatchId__c</fullName>
    <description>To Store Batch Id after User Migration</description>
    <label>UserMigrationBatchId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>