pkg/main/default/objects/GenMigrationSettings__c/fields/UserMigrationBatchStatus__c.field-meta.xml
<CustomField>
    <fullName>UserMigrationBatchStatus__c</fullName>
    <description>To Store User Migration Batch Status</description>
    <label>UserMigrationBatchStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>