pkg/main/default/objects/GenMigrationSettings__c/fields/WordTemplatesUpdated__c.field-meta.xml
<CustomField>
	<fullName>WordTemplatesUpdated__c</fullName>
	<defaultValue>false</defaultValue>
	<description>Setting this value to TRUE after updating Word Templates to v2.2</description>
	<label>Word templates updated?</label>
	<type>Checkbox</type>
</CustomField>